NanoUI improvement, recoil diminishment
NanoUI reworked, shows additional information now.

Recoil uses a diminishing calculation, allowing players to retain relatively good aim even at high recoil values.

--- a/nano/templates/weapon_stats.tmpl
+++ b/nano/templates/weapon_stats.tmpl
@@ -51,28 +51,36 @@
 					{{:data.burst_delay}} ms
 				</div>
 		{{/if}}
-		<h4>Armor details:</h4>
-			<div class="itemContent">
-				{{if data.recoil_info.length}}
-					{{for data.recoil_info}}
-						<div class="itemLabel">
-							{{:value.name}}
-						</div>
-						<div class="itemContent">
-						{{:helper.displayBar(value.value, 0, 5, value.value <= 0.5 ? 'little' : value.value <= 1.5 ? 'average' : 'high', value.value + ' degrees')}}
-						</div>
-					{{/for}}
-					<br>
-				{{else}}
-					<div class="average">
-						Has no kickback.
+
+		<h4>Recoil details:</h4>
+			{{if data.recoil_info.length}}
+				{{for data.recoil_info}}
+					<div class="itemLabel">
+						{{:value.name}}
 					</div>
-			</div>
+					<div class="itemContent">
+						{{:helper.displayBar(value.value, 0, data.total_recoil, value.value <= 0.5 ? 'good' : value.value <= 1.5 ? 'average' : 'bad', value.value + ' degrees')}}
+					</div>
+				{{/for}}
+				<br>
+			{{else}}
+				<div class="average">
+					Has no kickback.
+				</div>
+			{{/if}}
+
+		<h4>Physical details:</h4>
 		<div class="itemLabel">
 			Melee capabilities:
 		</div>
 			<div class="itemContent">
 				{{:helper.displayBar(data.force, 0, data.force_max, '', data.force)}}
+			</div>
+		<div class="itemLabel">
+			Armor penetration:
+		</div>
+			<div class="itemContent">
+				{{:helper.displayBar(data.armor_penetration, 0, 100, '', data.armor_penetration + '%')}}
 			</div>
 		
 		{{if data.caliber}}
@@ -143,6 +151,13 @@
 			</div>
 				<div class="itemContent">
 					{{:data.projectile_AP}}
+				</div>
+
+			<div class="itemLabel">
+				Recoil multiplier:
+			</div>
+				<div class="itemContent">
+					{{:data.projectile_recoil}}
 				</div>
 		</div>
 	</div>
