--- a/nano/templates/weapon_stats.tmpl
+++ b/nano/templates/weapon_stats.tmpl
@@ -23,10 +23,10 @@
 
 		{{if data.penetration_multiplier != 1}}
 			<div class="itemLabel">
-				Projectile AP multiplier:
+				Projectile Armor Divisor:
 			</div>
 			<div class="itemContent">
-				{{:data.penetration_multiplier}}x
+				{{:data.penetration_multiplier}}
 			</div>
 		{{/if}}
 
