--- a/nano/templates/weapon_stats.tmpl
+++ b/nano/templates/weapon_stats.tmpl
@@ -154,6 +154,13 @@
 				</div>
 
 			<div class="itemLabel">
+				Wound scale:
+			</div>
+				<div class="itemContent">
+					{{:data.projectile_WOUND}}
+				</div>
+
+			<div class="itemLabel">
 				Recoil multiplier:
 			</div>
 				<div class="itemContent">
@@ -188,6 +195,7 @@
 									Name:{{:value.projectile_name}}<br>
 									Overall damage: {{:value.projectile_damage}}<br>
 									Overall AP: {{:value.projectile_AP}}<br>
+									Wound scale: {{:value.projectile_WOUND}}<br>
 								</div>
 						{{/if}}
 						{{if value.burst}}
