--- a/nano/templates/weapon_stats.tmpl
+++ b/nano/templates/weapon_stats.tmpl
@@ -143,7 +143,7 @@
 				Overall damage:
 			</div>
 				<div class="itemContent">
-					{{:data.projectile_damage}}
+					{{:data.projectile_damage*data.projectile_WOUND}}
 				</div>
 
 			<div class="itemLabel">
@@ -151,13 +151,6 @@
 			</div>
 				<div class="itemContent">
 					{{:data.projectile_AP}}
-				</div>
-
-			<div class="itemLabel">
-				Wound scale:
-			</div>
-				<div class="itemContent">
-					{{:data.projectile_WOUND}}
 				</div>
 
 			<div class="itemLabel">
