--- a/nano/templates/weapon_stats.tmpl
+++ b/nano/templates/weapon_stats.tmpl
@@ -143,7 +143,7 @@
 				Overall damage:
 			</div>
 				<div class="itemContent">
-					{{:data.projectile_damage*data.projectile_WOUND}}
+					{{:data.projectile_damage}}
 				</div>
 
 			<div class="itemLabel">
