--- a/nano/templates/weapon_stats.tmpl
+++ b/nano/templates/weapon_stats.tmpl
@@ -154,6 +154,27 @@
 				</div>
 
 			<div class="itemLabel">
+				Wound scale:
+			</div>
+				<div class="itemContent">
+					{{:data.projectile_WOUND}}
+				</div>
+
+			<div class="itemLabel">
+				Unarmoured Damage:
+			</div>
+				<div class="itemContent">
+					{{:data.unarmoured_damage}}
+				</div>
+
+			<div class="itemLabel">
+				Armoured (10) Damage:
+			</div>
+				<div class="itemContent">
+					{{:data.armoured_damage}}
+				</div>
+
+			<div class="itemLabel">
 				Recoil multiplier:
 			</div>
 				<div class="itemContent">
