--- a/nano/templates/clothing_stats.tmpl
+++ b/nano/templates/clothing_stats.tmpl
@@ -45,6 +45,6 @@
 			{{:helper.displayBar(data.equip_delay, 0, 100, data.equip_delay < 10 ? 'good' : data.equip_delay > 50 ? 'bad': 'average', data.equip_delay/10+' seconds')}}
 		</div>
 		<div class="itemContent">
-			{{:helper.displayBar(data.info_style, -2, 2, data.info_style > 0 ? 'good' : data.info_style < 0 ? 'bad': 'average')}}
+			{{:helper.displayBar(data.info_style, -2, 2, data.info_style > 0 ? 'good' : data.info_style < 0 ? 'bad': 'average', data.info_style+' Style')}}
 	</div>
 </div>
