--- a/nano/templates/clothing_stats.tmpl
+++ b/nano/templates/clothing_stats.tmpl
@@ -46,7 +46,8 @@
 		</div>
 		<div class="itemLabel">
 			Style:
+		</div>
 		<div class="itemContent">
-			{{:helper.displayBar(data.info_style, -2, 2, data.info_style > 0 ? 'good' : data.info_style < 0 ? 'bad': 'average', data.info_style+' Style')}}
+			{{:helper.displayBar(data.info_style, -2, 2, data.info_style > 0 ? 'good' : data.info_style < 0 ? 'bad': 'average', data.info_style)}}
 	</div>
 </div>
