--- a/nano/templates/weapon_stats.tmpl
+++ b/nano/templates/weapon_stats.tmpl
@@ -171,7 +171,14 @@
 				Armoured (10) Damage:
 			</div>
 				<div class="itemContent">
-					{{:data.armoured_damage}}
+					{{:data.armoured_damage_10}}
+				</div>
+
+			<div class="itemLabel">
+				Armoured (15) Damage:
+			</div>
+				<div class="itemContent">
+					{{:data.armoured_damage_15}}
 				</div>
 
 			<div class="itemLabel">
