--- a/nano/templates/sanity.tmpl
+++ b/nano/templates/sanity.tmpl
@@ -130,7 +130,7 @@
 			<div style="padding: 1px; overflow:auto;">
 				<h3>holiness:</h3>
 			</div>
-			{{:helper.displayBar(data.righteous_life, 0, 100, data.righteous_life < 33 ? 'bad' : data.righteous_life > 66 ? 'good': 'average', data.righteous_life)}}
+			{{:helper.displayBar(data.righteous_life, 0, 100, data.righteous_life < 33 ? 'bad' : data.righteous_life > 66 ? 'good': 'average', data.righteous_life ? data.righteous_life : "0")}}
 			<br>
 		</div>
 	</div>
