Fixes and indicators

--- a/nano/templates/tool_stats.tmpl
+++ b/nano/templates/tool_stats.tmpl
@@ -110,7 +110,7 @@
 
 		<h4>Unique properties:</h4>
 
-		{{if extended_reach}}
+		{{if data.extended_reach}}
 			<div class="itemLabel">
 				Range on wield:
 			</div>
@@ -128,7 +128,7 @@
 			</div>
 		{{/if}}
 
-		{{if screen_shake}}
+		{{if data.screen_shake}}
 			<div class="itemLabel">
 				Hit effects on wield:
 			</div>
@@ -137,7 +137,7 @@
 			</div>
 		{{/if}}
 
-		{{if push_attack}}
+		{{if data.push_attack}}
 			<div class="itemLabel">
 				Attacking groin on disarm intent:
 			</div>
