--- a/nano/templates/sanity.tmpl
+++ b/nano/templates/sanity.tmpl
@@ -128,7 +128,7 @@
 				regeneration of your cruciform.
 			</div>
 			<div style="padding: 1px; overflow:auto;">
-				<h3>Holiness:</h3>
+				<h3>holiness:</h3>
 			</div>
 			{{:helper.displayBar(data.righteous_life, 0, 100, data.righteous_life < 33 ? 'bad' : data.righteous_life > 66 ? 'good': 'average', data.righteous_life ? data.righteous_life : "0")}}
 			<br>
