--- a/nano/templates/surgery_organ.tmpl
+++ b/nano/templates/surgery_organ.tmpl
@@ -1,134 +1,88 @@
-{{:helper.meatMode()}} 
-<div class="item" style="display: table">
-	<div class="item" style="display: table-cell; vertical-align: top; width: 200px; padding-right: 10px">
-		{{for data.contents :organ:organ_i}}
-		<div class="display">
-			<header{{:(!organ.status || organ.status.robotic) ? "" : " style='border-bottom: 2px solid #a0222a;'"}}>
-				<h3>{{:organ.name.toTitleCase()}}</h3>
-			</header>
-			<div style ='float: left; height: 32px; width: 32px; margin: 4px' class='statusDisplayItem'><img src= {{:organ.icon_data}} height=32 width=32></div>
-			{{:helper.link('Mods/Wounds', null, {'command' : 'view', 'view' : organ.ref}, null, 'floatRight')}}
-			<article>
-				{{if data.diagnosed}}
-					{{if organ.show_oxy}}
-					<section>
-						<span class="label">Oxygen:</span>
-						{{data.oxygen = Math.round((data.owner_oxymax - data.owner_oxyloss) * 10) / 10;}}
-						<div class="content">{{:helper.displayBar(data.oxygen, 0, data.owner_oxymax, 'average', data.oxygen + " / " + data.owner_oxymax)}}</div>
-					</section>
-					{{/if}}
-					{{if organ.max_damage}}
-					<section>
-						<span class="label">Health:</span>
-						{{organ.health = Math.round((organ.max_damage - organ.damage) * 10) / 10;}}
-						<div class="content">{{:helper.displayBar(organ.health, 0, organ.max_damage, !organ.damage ? 'good' : 'bad', organ.health + " / " + organ.max_damage)}}</div>
-					</section>
-					{{/if}}
-					{{if organ.max_blood}}
-					<section>
-						<span class="label">Blood:</span>
-						<div class="content">{{:helper.displayBar(organ.stored_blood, 0, organ.max_blood, 'bad', organ.stored_blood + " / " + organ.max_blood)}}</div>
-					</section>
-					{{/if}}
-				{{/if}}
-			</article>
-			<article>
-				{{if data.diagnosed}}
-					{{if organ.processes.length}}
-						<section>
-							<div class="display" style="width: 96%">
-								<div class="item">Organ types (efficiency): <span style="color: pink">{{:organ.processes}}</span></div>
-							</div>
-						</section>
-					{{/if}}
-					{{for organ.conditions :condition:condition_i}}
-					<section>
-						<span class="label">{{:condition.name}}:</span>
-						<div class="content">{{:helper.link(condition.fix_name, null, {'command' : 'step', 'step' : condition.step, 'organ' : condition.organ}, organ.open ? null : 'disabled')}}</div>
-					</section>
-					{{/for}}
-				{{/if}}
-			</article>
-			<article>
-				{{if organ.actions.length}}
-					{{for organ.actions :action:action_i}}
-					<section>
-						<div class="content">{{:helper.link(action.name, null, {'command' : 'step', 'step' : action.step, 'organ' : action.organ, 'target' : action.target}, organ.open ? null : 'disabled')}}</div>
-					</section>
-					{{/for}}
-				{{/if}}
-			</article>
-		</div>
-		{{/for}}
-
-		{{if data.amputate_step}}
-			{{:helper.link(data.status.robotic ? 'Disconnect' : 'Amputate', null, {'command' : 'step', 'step' : data.amputate_step}, null, 'redButton')}}
-		{{/if}}
-		{{if data.insert_step}}
-			{{:helper.link('Insert', null, {'command' : 'step', 'step' : data.insert_step})}}
-		{{/if}}
-	</div>
-	{{if data.viewing_internal}}
-		<div class="item" style="display: table-cell; vertical-align: top; width: auto">
-			<div class="display">
-				<article>
-					<div class="content">{{:helper.link('Return to External Diagnostics', 'arrowreturn-1-w', {'command' : 'view', 'view' : null})}}</div>
-				</article>
-			</div>
-			<div class="display">
-				<header><h3>Diagnostics - {{:data.diag_name.toTitleCase()}}</h3></header>
-				<article>
-					{{if data.diagnosed}}
-						<section>
-							<span class="label">Health:</span>
-							<div class="content">{{:helper.displayBar(data.diag_health, 0, data.diag_max_damage, (data.diag_damage > (data.diag_max_damage / 2)) ? 'bad' : 'good', data.diag_health + " / " + data.diag_max_damage)}}</div>	
-						</section>
-					{{/if}}
-				</article>
-				<article>
-					<div class="content">{{:helper.link("Examine", null, {'command' : 'step', 'step' : data.diag_examine, 'organ' : data.diag_ref,}, organ.open ? null : 'disabled')}}</div>
-				</article>
-			</div>
-			<div class="display">
-				<header><h3>Modifications</h3></header>
-				<article>
-					<div class="nanoMap">
-						{{if data.diag_mods}}
-							{{for data.diag_mods :mod:mod_i}}
-								<div class="item">{{:mod.name}}</div>
+{{:helper.meatMode()}}
+{{if data.viewing_internal}}
+	{{#def._internal}}
+{{else}}
+	<div class="item" style="display: table">
+		<div class="item" style="display: table-cell; vertical-align: top; width: 200px; padding-right: 10px">
+			{{for data.contents :organ:organ_i}}
+				<div class="display">
+					<header{{:(!organ.status || organ.status.robotic) ? "" : " style='border-bottom: 2px solid #a0222a;'"}}>
+						<h3>{{:organ.name.toTitleCase()}}</h3>
+					</header>
+					<div style ='float: left; height: 32px; width: 32px; margin: 4px' class='statusDisplayItem'><img src= {{:organ.icon_data}} height=32 width=32></div>
+					{{:helper.link('Mods/Wounds', null, {'command' : 'view', 'view' : organ.ref}, null, 'floatRight')}}
+					<article>
+						{{if data.diagnosed}}
+							{{if organ.wound_count}}
+								<section>
+									<span class="label">Wounds:</span>
+									<div class="content">{{organ.wound_count}}</div>
+								</section>
+							{{/if}}
+							{{if organ.show_oxy}}
+								<section>
+									<span class="label">Oxygen:</span>
+									{{data.oxygen = Math.round((data.owner_oxymax - data.owner_oxyloss) * 10) / 10;}}
+									<div class="content">{{:helper.displayBar(data.oxygen, 0, data.owner_oxymax, 'average', data.oxygen + " / " + data.owner_oxymax)}}</div>
+								</section>
+							{{/if}}
+							{{if organ.max_damage}}
+								{{if organ.brain_health}}
+									<section>
+										<span class="label">Integrity:</span>
+										<div class="content">{{:helper.displayBar(organ.brain_health, 0, organ.brain_health_max, !organ.brain_health ? 'good' : 'bad', organ.brain_health + " / " + organ.brain_health_max)}}</div>
+									</section>
+								{{/if}}
+								<section>
+									<span class="label">Health:</span>
+									{{organ.health = Math.round((organ.max_damage - organ.damage) * 10) / 10;}}
+									<div class="content">{{:helper.displayBar(organ.health, 0, organ.max_damage, !organ.damage ? 'good' : 'bad', organ.health + " / " + organ.max_damage)}}</div>
+								</section>
+							{{/if}}
+							{{if organ.max_blood}}
+							<section>
+								<span class="label">Blood:</span>
+								<div class="content">{{:helper.displayBar(organ.stored_blood, 0, organ.max_blood, 'bad', organ.stored_blood + " / " + organ.max_blood)}}</div>
+							</section>
+							{{/if}}
+						{{/if}}
+					</article>
+					<article>
+						{{if data.diagnosed}}
+							{{if organ.processes.length}}
+								<section>
+									<div class="display" style="width: 96%">
+										<div class="item">Organ types (efficiency): <span style="color: pink">{{:organ.processes}}</span></div>
+									</div>
+								</section>
+							{{/if}}
+							{{for organ.conditions :condition:condition_i}}
+							<section>
+								<span class="label">{{:condition.name}}:</span>
+								<div class="content">{{:helper.link(condition.fix_name, null, {'command' : 'step', 'step' : condition.step, 'organ' : condition.organ}, organ.open ? null : 'disabled')}}</div>
+							</section>
 							{{/for}}
 						{{/if}}
-					</div>
-					<div class="content">{{:helper.link("Attach", null, {'command' : 'step', 'step' : data.diag_attach, 'organ' : data.diag_ref,}, organ.open ? null : 'disabled')}}</div>
-					<div class="content">{{:helper.link("Remove", null, {'command' : 'step', 'step' : data.diag_remove, 'organ' : data.diag_ref,}, organ.open ? null : 'disabled')}}</div>
-				</article>
-			</div>
-			<div class="display">
-				<header><h3>Wounds</h3></header>
-				{{if data.diag_wounds}}
-					<article>
-						{{for data.diag_wounds :wound:wound_i}}
-							<div class="nanoMap">
-								<div class="item">
-									<div class="itemLabel">Type:</div>
-									<div class="itemContent">{{:wound.name}}</div>
-								</div>
-								<div class="item">
-									<div class="itemLabel">Severity:</div>
-									<div class="itemContent">{{:wound.severity}} / {{:wound.severity_max}}</div>
-								</div>
-								<div class="item">
-									<div class="itemLabel">Treatments:</div>
-									<div class="itemContent">{{:wound.treatments}}</div>
-								</div>
-								<div class="content">{{:helper.link('Treat', null, {'command' : 'treat_wound', 'wound' : wound.wound})}}</div>
-							</div>
-						{{/for}}
 					</article>
-				{{/if}}
-			</div>
+					<article>
+						{{if organ.actions.length}}
+							{{for organ.actions :action:action_i}}
+							<section>
+								<div class="content">{{:helper.link(action.name, null, {'command' : 'step', 'step' : action.step, 'organ' : action.organ, 'target' : action.target}, organ.open ? null : 'disabled')}}</div>
+							</section>
+							{{/for}}
+						{{/if}}
+					</article>
+				</div>
+			{{/for}}
+
+			{{if data.amputate_step}}
+				{{:helper.link(data.status.robotic ? 'Disconnect' : 'Amputate', null, {'command' : 'step', 'step' : data.amputate_step}, null, 'redButton')}}
+			{{/if}}
+			{{if data.insert_step}}
+				{{:helper.link('Insert', null, {'command' : 'step', 'step' : data.insert_step})}}
+			{{/if}}
 		</div>
-	{{else}}
 		<div class="item" style="display: table-cell; vertical-align: top; width: auto">
 			<div class="display">
 				<header><h3>Diagnostics</h3></header> 
@@ -196,5 +150,5 @@
 			</div>
 			{{/if}}
 		</div>
-	{{/if}}
-</div>
+	</div>
+{{/if}}
